@@ -1,3 +1,7 @@
+2005-08-04  Albert Chu  <chu11@llnl.gov>
+
+	* Begin work on bgl ciod monitoring module.
+
 2005-07-26  Albert Chu  <chu11@llnl.gov>
 
 	* Fix cerebro-admin and cerebro-stat bugs.
